--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -12,4 +12,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN}}
-
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_LANGUAGE: "True"
+          SHOW_OS: "True"
