--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -15,3 +15,4 @@ jobs:
           SHOW_PROFILE_VIEWS: "False"
           SHOW_LANGUAGE: "True"
           SHOW_OS: "True"
+          SHOW_SHORT_INFO: "False"
