--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,3 +16,4 @@ jobs:
           SHOW_LANGUAGE: "True"
           SHOW_OS: "True"
           SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
